Send forms to email v4 01-17-2025

--- a/contact_us.html
+++ b/contact_us.html
@@ -50,6 +50,9 @@
       padding-top: 75%; /* Relación de aspecto 4:3 para pantallas más pequeñas */
     }
   }
+  .captcha-container {
+         text-align: center;
+         }
       </style>
       <link href="favicon.png" type="image/x-icon" rel="shortcut icon">
       <link href="assets/css/master.css" rel="stylesheet">
@@ -252,6 +255,7 @@
                         </div>
                         <!-- end row -->
                      </form>
+                     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
                   </div>
                </div>
                <!-- end row --> 
@@ -260,8 +264,6 @@
          </section>
          <!-- end section_default -->
          <!-- end new block -->
-
-         <script src="https://www.google.com/recaptcha/api.js" async defer></script>
          <footer class="footer">
             <div class="wrap-section-border">
                <section class="section_mod-h section-bg section-bg_second">
