--- a/get_pre_qualified.html
+++ b/get_pre_qualified.html
@@ -392,10 +392,15 @@
                      </label>
                   </div>
                </div>
+               <div class="captcha-container">
+                  <!-- Include your CAPTCHA widget here -->
+                  <div class="g-recaptcha" data-sitekey="6LeDJrsqAAAAAOArFJw811iifNd0SKEjysX-gBw6"></div>
+               </div>
                <div class="form-footer">
                   <button type="submit">I AGREE</button>
                </div>
             </form>
+            <script src="https://www.google.com/recaptcha/api.js" async defer></script>
          </div>
          <!-- end new block -->
          <footer class="footer">
