Send forms to email v7 01-17-2025

--- a/get_pre_qualified.html
+++ b/get_pre_qualified.html
@@ -80,6 +80,9 @@
          margin-top: 20px;
          line-height: 1.5;
          }
+         .captcha-container {
+         text-align: center;
+         }
       </style>
       <link href="favicon.png" type="image/x-icon" rel="shortcut icon">
       <link href="assets/css/master.css" rel="stylesheet">
@@ -387,7 +390,7 @@
                   <br><br>
                   <div id="" class="form-section">
                      <label>
-                     <input type="checkbox" name="agree" required>
+                     <input type="checkbox" id="agree" name="agree" required>
                      I have read the Privacy Policy, agree with the consent statement above, and authorize you to contact me via phone, text, and/or email.
                      </label>
                   </div>
