--- a/credit_application.html
+++ b/credit_application.html
@@ -109,6 +109,9 @@
          .form-footer button:hover {
          background-color: #000000;;
          }
+         .captcha-container {
+         text-align: center;
+         }
       </style>
       <link href="favicon.png" type="image/x-icon" rel="shortcut icon">
       <link href="assets/css/master.css" rel="stylesheet">
@@ -611,10 +614,15 @@
                   I have read the Privacy Policy, agree with the consent statement above, and authorize you to contact me via phone, text and/or email.
                   </label>
                </div>
+               <div class="captcha-container">
+                  <!-- Include your CAPTCHA widget here -->
+                  <div class="g-recaptcha" data-sitekey="6LeDJrsqAAAAAOArFJw811iifNd0SKEjysX-gBw6"></div>
+               </div>
                <div class="form-footer">
                   <button type="submit">SUBMIT APPLICATION</button>
                </div>
             </form>
+            <script src="https://www.google.com/recaptcha/api.js" async defer></script>
          </div>
          <!-- end new block -->
          <footer class="footer">
