Send forms to email v8 01-17-2025

--- a/credit_application.html
+++ b/credit_application.html
@@ -234,7 +234,7 @@
          <!-- end block-title -->
          <!-- starts new block -->
          <div class="form-container">
-            <form action="/send-email" method="POST">
+            <form action="/php/credit_application.php" method="POST">
                <div class="form-section">
                   <p style="text-align: center; font-size: 14px; color: #000000; margin-bottom: 20px;">
                      Please complete all those marked with <span style="color: #e00e0e;">*</span>
