--- a/credit_application.html
+++ b/credit_application.html
@@ -614,15 +614,14 @@
                   I have read the Privacy Policy, agree with the consent statement above, and authorize you to contact me via phone, text and/or email.
                   </label>
                </div>
-               <div class="captcha-container">
-                  <!-- Include your CAPTCHA widget here -->
+              <!-- <div class="captcha-container">
                   <div class="g-recaptcha" data-sitekey="6LeDJrsqAAAAAOArFJw811iifNd0SKEjysX-gBw6"></div>
-               </div>
+               </div> -->
                <div class="form-footer">
                   <button type="submit">SUBMIT APPLICATION</button>
                </div>
             </form>
-            <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+          <!--  <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
          </div>
          <!-- end new block -->
          <footer class="footer">
