--- a/home.html
+++ b/home.html
@@ -150,17 +150,50 @@
                   </div>
                </div>
             </div>
+            <div class="header__inner">
+               <div class="container">
+                  <div class="row">
+                     <div class="col-md-12 col-xs-12">
+                        <a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a>
+                        <div class="navbar yamm">
+                           <div class="navbar-header hidden-md hidden-lg hidden-sm">
+                              <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                              <a href="javascript:void(0);" class="navbar-brand"></a> 
+                           </div>
+                           <div id="navbar-collapse-1" class="navbar-collapse collapse">
+                              <ul class="nav navbar-nav">
+                                 <li><a href="new_vehicle.html">Vehicles</a></li>
+                                 <li><a href="trade_or_sell_your_vehicle.html">Trade or Sell Your Vehicle</a> </li>
+                                 <li><a href="credit_application.html">Credit Application</a></li>
+                                 <li><a href="get_pre_qualified.html">Get Pre-Qualified in Seconds</a></li>
+                                 <li class="dropdown" >
+                                    <a href="request_a_free_quote.html">Request a Free Quote</a>
+                                    <!--  <ul role="menu" class="dropdown-menu">
+                                       <li> <a href="news-grid.html">DROPDOWN</a> </li>
+                                       <li> <a href="news-details.html">DROPDOWN</a> </li>
+                                       </ul> -->
+                                 </li>
+                                 <li><a href="about-us.html">About Us</a></li>
+                                 <li><a href="contact_us.html">Contact Us</a></li>
+                              </ul>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <!-- end container --> 
+            </div>
             <!-- Floating Buttons Section -->
             <!-- Mobile Navigation -->
-            <div class="header__inner">
+           <!-- <div class="header__inner">
                <div class="container">
                    <div class="row">
                        <div class="col-md-12 col-xs-12">
                         <!--   <a href="home.html" class="logo">
                                <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo">
-                           </a> -->
+                           </a> 
                            <div class="navbar yamm">
-                               <!-- Navbar header for mobile toggle button -->
+                               <!-- Navbar header for mobile toggle button 
                                <div class="navbar-header hidden-md hidden-lg hidden-sm">
                                    <button
                                        type="button"
@@ -173,8 +206,6 @@
                                        <span class="icon-bar"></span>
                                    </button>
                                </div>
-           
-                               <!-- Collapsible Mobile Menu -->
                                <div id="navbar-collapse-1" class="navbar-collapse collapse mobile-menu">
                                    <ul class="nav navbar-nav">
                                        <li><a href="new_vehicle.html">Vehicles</a></li>
@@ -192,11 +223,10 @@
                        </div>
                    </div>
                </div>
-               <!-- end container -->
            </div>
            
             <!-- Floating Buttons Section -->
-            <div class="floating-buttons desktop-menu">
+          <!--  <div class="floating-buttons desktop-menu">
                <div class="header__inner">
                   <div class="container">
                      <div class="row">
@@ -214,7 +244,7 @@
                      </div>
                   </div>
                </div>
-            </div> 
+            </div> -->
          </div>
          <!-- end main-slider -->
          <section class="section_mod-a section-bg-2">
