Change placeholder for about us 01-20-2025

--- a/home.html
+++ b/home.html
@@ -275,9 +275,9 @@
                            </ul>
                            <ul class="link-img link-img_mod-b list-inline wow bounceInRight" data-wow-duration="2s">
                               <li class="link-img__item">
-                                 <a class="link-img__link" href="">
+                                 <a class="link-img__link" href="about-us.html">
                                     <img class="img-responsive" src="assets/media/link-img/3.png" height="250" width="170" alt="Foto">
-                                    <div class="link-img__wrap-title"><span class="link-img__title">PLACEHOLDER</span></div>
+                                    <div class="link-img__wrap-title"><span class="link-img__title">ABOUT US</span></div>
                                  </a>
                               </li>
                               <li class="link-img__item">
