--- a/get_pre_qualified.html
+++ b/get_pre_qualified.html
@@ -439,7 +439,7 @@
                               </div>-->
                               <div class="footer__item">
                                  <span class="footer__name">email:</span>
-                                 <span class="footer__text">sales@nextlaneauto.com</span>
+                                 <span class="footer__text">sales@nextlaneauto.net</span>
                               </div>
                               <div class="footer__item">
                                  <span class="footer__name">Hours:</span>
