--- a/about-us.html
+++ b/about-us.html
@@ -490,7 +490,7 @@
                               </div> -->
                               <div class="footer__item">
                                  <span class="footer__name">email:</span>
-                                 <span class="footer__text">sales@nextlaneauto.com</span>
+                                 <span class="footer__text">sales@nextlaneauto.net</span>
                               </div>
                               <div class="footer__item">
                                  <span class="footer__name">Hours:</span>
