--- a/home.html
+++ b/home.html
@@ -609,7 +609,7 @@
                                  <i class="icon flaticon-wheels10"></i>
                                  <div class="decor-1"></div>
                                  <div class="list-services__inner">
-                                    <h3 class="list-services__title"><strong>BODY SHOP REFERRALS</strong></h3>
+                                    <h3 class="list-services__title"><strong>BODY SHOP</strong></h3>
                                     <div class="list-services__description">Nextlane Auto Body Shop Referrals.</div>
                                  </div>
                               </div>
@@ -1085,7 +1085,7 @@
                               <div class="col-xs-12">
                                  <div class="footer__item"> <span class="footer__name">Phone:</span> <span class="footer__text">(516) 912-6413</span> </div>
                                  <!-- <div class="footer__item"> <span class="footer__name">Fax:</span> <span class="footer__text">+1 (234) 567 8998</span> </div> -->
-                                 <div class="footer__item"> <span class="footer__name">email:</span> <span class="footer__text">sales@nextlaneauto.com</span> </div>
+                                 <div class="footer__item"> <span class="footer__name">email:</span> <span class="footer__text">sales@nextlaneauto.net</span> </div>
                                  <div class="footer__item"> <span class="footer__name">Hours:</span> <span class="footer__text">Mon - Fri : 9am - 5pm</span> </div>
                                  <div class="footer__item"> <span class="footer__name">Hours:</span> <span class="footer__text">Sat - Sun : 10am - 4pm</span> </div>
                               </div>
