take foto in trade or sell 01-20-2025

--- a/trade_or_sell_your_vehicle.html
+++ b/trade_or_sell_your_vehicle.html
@@ -298,22 +298,22 @@
                <div class="upload-section">
                   <h2>Exterior</h2>
                   <label for="exterior_front">Front of Vehicle (Max 15MB) <span style="color: #e00e0e;">*</span></label>
-                  <input type="file" id="exterior_front" name="exterior_front" accept="image/*" required>
+                  <input type="file" id="exterior_front" name="exterior_front" accept="image/*" capture="environment" required>
                   <label for="side1">Side #1 of Vehicle (Max 15MB) <span style="color: #e00e0e;">*</span></label>
-                  <input type="file" id="side1" name="side1" accept="image/*" required>
+                  <input type="file" id="side1" name="side1" accept="image/*" capture="environment" required>
                   <label for="side2">Side #2 of Vehicle (Max 15MB) <span style="color: #e00e0e;">*</span></label>
-                  <input type="file" id="side2" name="side2" accept="image/*" required>
+                  <input type="file" id="side2" name="side2" accept="image/*" capture="environment" required>
                   <label for="back">Back of Vehicle (Max 15MB) <span style="color: #e00e0e;">*</span></label>
-                  <input type="file" id="back" name="back" accept="image/*" required>
+                  <input type="file" id="back" name="back" accept="image/*" capture="environment" required>
                   <h2>Interior</h2>
                   <label for="front_seats">Front Seats (Max 15MB) <span style="color: #e00e0e;">*</span></label>
-                  <input type="file" id="front_seats" name="front_seats" accept="image/*" required>
+                  <input type="file" id="front_seats" name="front_seats" accept="image/*" capture="environment" required>
                   <label for="rear_seats">Rear Seats (Max 15MB) <span style="color: #e00e0e;">*</span></label>
-                  <input type="file" id="rear_seats" name="rear_seats" accept="image/*" required>
+                  <input type="file" id="rear_seats" name="rear_seats" accept="image/*" capture="environment" required>
                   <label for="cluster">Vehicle Cluster (Max 15MB) <span style="color: #e00e0e;">*</span></label>
-                  <input type="file" id="cluster" name="cluster" accept="image/*" required>
+                  <input type="file" id="cluster" name="cluster" accept="image/*" capture="environment" required>
                   <label for="registration">Vehicle Registration (Max 15MB) <span style="color: #e00e0e;">*</span></label>
-                  <input type="file" id="registration" name="registration" accept="image/*" required>
+                  <input type="file" id="registration" name="registration" accept="image/*" capture="environment" required>
                </div>
                <h3>Additional Information</h3>
                <label for="damages">Are there any visible damages? If so, please explain below. If there aren't any damages, type "NA" <span style="color: #e00e0e;">*</span></label>
