--- a/credit_application.html
+++ b/credit_application.html
@@ -415,7 +415,7 @@
                   <h3 class="fa fa-info-circle fa-2x">&nbsp; Other Information</h3>
                   <label for="coBuyer">Do you want to add a Co-Buyer?</label>
                   <select id="coBuyer" name="coBuyer" onchange="toggleSection()">
-                     <option value="no">?</option>
+                     <option value="">-- Select --</option>
                      <option value="no">No</option>
                      <option value="yes">Yes</option>
                   </select>
