Credit application changes v4 01-21-2025

--- a/home.html
+++ b/home.html
@@ -50,6 +50,9 @@
          margin: 0; /* Elimina márgenes */
          padding: 0; /* Elimina relleno */
       }
+      .sp-image{
+         ackground-color: rgba(0, 0, 0, 0.7); /* Fondo semi-transparente */ 
+      }
       .header__inner {
         position: relative;
         top: 0; /* Evita que se superponga con el video */
