Credit application changes v7 01-21-2025

--- a/home.html
+++ b/home.html
@@ -41,6 +41,10 @@
          color: #e00e0e; /* Highlighted text in red */
          font-weight: bold; /* Make highlights stand out */
       }
+      .slider-pro main-slider sp-horizontal{
+         background-color: rgba(0, 0, 0, 0.7); /* Fondo semi-transparente */
+
+      }
       .slider-container {
          position: relative;
          width: 100%; /* Asegura que el slider ocupe todo el ancho */
@@ -184,7 +188,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12 col-xs-12">
-                        <a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a>
+                      <!--  <a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a> -->
                         <div class="navbar yamm">
                            <div class="navbar-header hidden-md hidden-lg hidden-sm">
                               <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
