--- a/failed.html
+++ b/failed.html
@@ -166,7 +166,7 @@
 				
 				<div style="display: flex; justify-content: center; align-items: center; min-height: 60vh;">
 					<div style="text-align: center; max-width: 600px; background-color: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-						<img src="assets/nla.png" alt="Error" style="max-width: 100%; height: auto; margin-bottom: 20px;">
+						<img src="assets/nlaw.png" alt="Error" style="max-width: 100%; height: auto; margin-bottom: 20px;">
 						<h2 style="font-size: 2.5em; color: #e00e0e;">Something Went Wrong!</h2>
 						<p style="font-size: 1.1em; line-height: 1.5; color: #555;">
 							We apologize for the inconvenience. There was an error sending your message. Please ensure that all the details are correct and try submitting again.
