--- a/get_pre_qualified.html
+++ b/get_pre_qualified.html
@@ -156,7 +156,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12 col-xs-12">
-                        <a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a>
+                        <a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nlaw.png" height="50" width="111" alt="Logo"> </a>
                         <div class="navbar yamm">
                            <div class="navbar-header hidden-md hidden-lg hidden-sm">
                               <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
