changes v1 01-21-2025 about ssl

--- a/request_a_free_quote.html
+++ b/request_a_free_quote.html
@@ -297,6 +297,7 @@
                </section>
                <!-- end section_mod-b -->
             </div>
+            <span id="siteseal"><script async type="text/javascript" src="https://seal.starfieldtech.com/getSeal?sealID=KJ0iSRH7hjg5Sp35DLilv3FvDBFbPn05fabJNnAeyIffkwJfczYauHG6rr81"></script></span>
             <!-- end wrap-section-border -->
             <div class="footer__wrap-btn"> <a class="footer__btn scroll" href="#this-top">top</a> </div>
             <div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="#">NextLane Auto</a> : All rights reserved</div>
