--- a/vehicle-listings.html
+++ b/vehicle-listings.html
@@ -561,6 +561,7 @@
 							</div><!-- end bg-inner -->
 						</section><!-- end section_mod-b -->
 					</div><!-- end wrap-section-border -->
+					<span id="siteseal"><script async type="text/javascript" src="https://seal.starfieldtech.com/getSeal?sealID=KJ0iSRH7hjg5Sp35DLilv3FvDBFbPn05fabJNnAeyIffkwJfczYauHG6rr81"></script></span>
 					<div class="footer__wrap-btn"> <a class="footer__btn scroll" href="#this-top">top</a> </div>
 
 					<div class="copyright">Copyrights 2015 <a class="copyright__link" href="javascript:void(0);">AutoZONE</a> : : All rights reserved</div>
