--- a/home.html
+++ b/home.html
@@ -188,7 +188,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12 col-xs-12">
-                      <!--  <a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a> -->
+                     
                         <div class="navbar yamm">
                            <div class="navbar-header hidden-md hidden-lg hidden-sm">
                               <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
@@ -196,6 +196,7 @@
                            </div>
                            <div id="navbar-collapse-1" class="navbar-collapse collapse">
                               <ul class="nav navbar-nav">
+                                 <li><a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nlah.png" height="50" width="111" alt="Logo"></a></li>
                                  <li><a href="new_vehicle.html">Vehicles</a></li>
                                  <li><a href="trade_or_sell_your_vehicle.html">Trade or Sell Your Vehicle</a> </li>
                                  <li><a href="credit_application.html">Credit Application</a></li>
