--- a/home.html
+++ b/home.html
@@ -43,24 +43,23 @@
       }
       .slider-pro main-slider sp-horizontal{
          background-color: rgba(0, 0, 0, 0.7); /* Fondo semi-transparente */
-
       }
       .slider-container {
          position: relative;
          width: 100%; /* Asegura que el slider ocupe todo el ancho */
-         background-color: rgba(0, 0, 0, 0.7); /* Fondo semi-transparente */
-         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra */
+         background-color: #181818; 
          z-index: 1000; /* Aparece encima de otros elementos */
          margin: 0; /* Elimina márgenes */
          padding: 0; /* Elimina relleno */
       }
       .sp-image{
-         ackground-color: rgba(0, 0, 0, 0.7); /* Fondo semi-transparente */ 
+         background-color: rgba(0, 0, 0, 0.7); /* Fondo semi-transparente */ 
       }
       .header__inner {
         position: relative;
         top: 0; /* Evita que se superponga con el video */
         z-index: 1100; /* Asegura que el menú esté visible sobre el video */
+        background-color: #181818; /* Fondo semi-transparente */
       }
      .video-container video {
       display: block; /* Evita espacios extra del video */
@@ -68,7 +67,6 @@
       margin: 0; /* Sin márgenes */
       padding: 0; /* Sin relleno */
       background-color: rgba(0, 0, 0, 0.7); /* Fondo semi-transparente */
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra */
      }
      .navbar-collapse {
        margin: 0; /* Elimina márgenes del menú */
@@ -188,7 +186,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12 col-xs-12">
-                     
+                        <a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nlaw.png" height="50" width="111" alt="Logo"> </a> 
                         <div class="navbar yamm">
                            <div class="navbar-header hidden-md hidden-lg hidden-sm">
                               <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
@@ -196,7 +194,7 @@
                            </div>
                            <div id="navbar-collapse-1" class="navbar-collapse collapse">
                               <ul class="nav navbar-nav">
-                                 <li><a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nlah.png" height="50" width="111" alt="Logo"></a></li>
+                               <!--  <li><a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nlah.png" height="50" width="111" alt="Logo"></a></li> -->
                                  <li><a href="new_vehicle.html">Vehicles</a></li>
                                  <li><a href="trade_or_sell_your_vehicle.html">Trade or Sell Your Vehicle</a> </li>
                                  <li><a href="credit_application.html">Credit Application</a></li>
@@ -860,7 +858,7 @@
                         <ul class="list-staff list-unstyled">
                            <li class="list-staff__item clearfix">
                               <div class="list-staff__media">
-                                 <img class="img-responsive" src="assets/media/staff/1.jpg" height="280" width="280" alt="foto">
+                                 <img class="img-responsive" src="assets/media/staff/5.jpeg" height="280" width="280" alt="foto">
                                  <ul class="list-staff__social list-inline">
                                     <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
                                     <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li>
@@ -891,7 +889,7 @@
                            <!-- end list-staff__item -->
                            <li class="list-staff__item clearfix">
                               <div class="list-staff__media">
-                                 <img class="img-responsive" src="assets/media/staff/3.jpg" height="280" width="280" alt="foto">
+                                 <img class="img-responsive" src="assets/media/staff/6.jpeg" height="280" width="280" alt="foto">
                                  <ul class="list-staff__social list-inline">
                                     <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
                                     <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li>
@@ -922,7 +920,7 @@
                            <!-- end list-staff__item -->
                            <li class="list-staff__item clearfix">
                               <div class="list-staff__media">
-                                 <img class="img-responsive" src="assets/media/staff/2.jpg" height="280" width="280" alt="foto">
+                                 <img class="img-responsive" src="assets/media/staff/7.jpeg" height="280" width="280" alt="foto">
                                  <ul class="list-staff__social list-inline">
                                     <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
                                     <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li>
@@ -953,7 +951,7 @@
                            <!-- end list-staff__item -->
                            <li class="list-staff__item clearfix">
                               <div class="list-staff__media">
-                                 <img class="img-responsive" src="assets/media/staff/4.jpg" height="280" width="280" alt="foto">
+                                 <img class="img-responsive" src="assets/media/staff/8.png" height="280" width="280" alt="foto">
                                  <ul class="list-staff__social list-inline">
                                     <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
                                     <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li>
