Changes the teams v1 01-22-2025

--- a/home.html
+++ b/home.html
@@ -891,7 +891,7 @@
                               <div class="list-staff__media">
                                  <img class="img-responsive" src="assets/media/staff/7.jpeg" height="280" width="280" alt="foto">
                                  <ul class="list-staff__social list-inline">
-                                    <1--<li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
+                                    <!--<li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
                                     <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li> -->
                                     <li><a class="icon fa fa-instagram" href="https://www.instagram.com/nextlaneadnan/"></a></li>
                                  </ul>
