Changes the teams v2 01-22-2025

--- a/home.html
+++ b/home.html
@@ -331,7 +331,7 @@
                            <div class="row">
                               <div class="col-xs-12">
                                  <h2 class="ui-title-block">Latest Offers</h2>
-                                 <div class="ui-subtitle-block_mod-b">Sed euismod ullamcorper tortor suspendisse potena quisue</div>
+                                <!-- <div class="ui-subtitle-block_mod-b">Sed euismod ullamcorper tortor suspendisse potena quisue</div> -->
                                  <div class="slider-grid owl-carousel owl-theme owl-theme_mod-c enable-owl-carousel"
                                     data-pagination="true"
                                     data-single-item="true"
@@ -854,7 +854,7 @@
                   <div class="row">
                      <div class="col-xs-12">
                         <h2 class="ui-title-block">OUR TEAM</h2>
-                        <div class="ui-subtitle-block_mod-b">Sed euismod ullamcorper tortQr suspendisse</div>
+                       <!-- <div class="ui-subtitle-block_mod-b">Sed euismod ullamcorper tortQr suspendisse</div> -->
                         <ul class="list-staff list-unstyled">
                            <li class="list-staff__item clearfix">
                               <div class="list-staff__media">
