Changes the teams v3 01-22-2025

--- a/success.html
+++ b/success.html
@@ -132,7 +132,7 @@
 											   </ul> -->
 										 </li>
 										 <li><a href="about-us.html">About Us</a></li>
-										 <li><a href="news-details.html">Contact Us</a></li>
+										 <li><a href="contact_us.html">Contact Us</a></li>
 									  </ul>
 								   </div>
 								</div>
