Change section review and smtp send 02-04-2025

--- a/home.html
+++ b/home.html
@@ -1411,7 +1411,7 @@
             </section>
             <!-- end section_default -->
             <!-- end section_default -->
-            <div class="wrap-section-border wow bounceInUp" data-wow-duration="2s">
+          <!--  <div class="wrap-section-border wow bounceInUp" data-wow-duration="2s">
                <section class="section_mod-g section-bg section-bg_primary">
                   <div class="bg-inner border-section-top border-section-top_mod-a">
                      <div class="container">
@@ -1440,7 +1440,7 @@
                                        <div class="reviews__category">CUSTOMER</div>
                                     </div>
                                  </div>
-                                 <!-- end reviews -->
+                                 <!-- end reviews --
                                  <div class="reviews">
                                     <h3 class="reviews__title">affordable deals!!!</h3>
                                     <div class="decor-1"></div>
@@ -1453,7 +1453,7 @@
                                        <div class="reviews__category">auto Dealer</div>
                                     </div>
                                  </div>
-                                 <!-- end reviews -->
+                                 <!-- end reviews --
                                  <div class="reviews">
                                     <h3 class="reviews__title">very much satisfied.</h3>
                                     <div class="decor-1"></div>
@@ -1466,7 +1466,7 @@
                                        <div class="reviews__category">CUSTOMER</div>
                                     </div>
                                  </div>
-                                 <!-- end reviews -->
+                                 <!-- end reviews --
                                  <div class="reviews">
                                     <h3 class="reviews__title">BEST CARS!</h3>
                                     <div class="decor-1"></div>
@@ -1479,21 +1479,21 @@
                                        <div class="reviews__category">CUSTOMER</div>
                                     </div>
                                  </div>
-                                 <!-- end reviews --> 
+                                 <!-- end reviews -->
                               </div>
-                              <!-- end slider-services --> 
+                              <!-- end slider-services --
                            </div>
-                           <!-- end col --> 
+                           <!-- end col --
                         </div>
-                        <!-- end row -->
+                        <!-- end row --
                         <div class="border-section-bottom"></div>
                      </div>
-                     <!-- end container --> 
+                     <!-- end container --
                   </div>
-                  <!-- end bg-inner --> 
+                  <!-- end bg-inner --
                </section>
-               <!-- end section_mod-b --> 
-            </div>
+               <!-- end section_mod-b --
+            </div> -->
             <!-- end wrap-section-border -->
             <!-- end section_default -->
             <footer class="footer wow bounceInUp" data-wow-duration="2s">
