--- a/credit_application.html
+++ b/credit_application.html
@@ -273,7 +273,7 @@
                   <div class="form-group">
                      <label for="phone"> Phone <span style="color: #e00e0e;">*</span></label>
                      <i class="fa fa-phone"></i>
-                     <input type="tel" id="phone" name="phone" placeholder="000-000-0000"  pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" title="PHONE must be in the format 000-000-0000" required>
+                     <input type="tel" id="phone" name="phone" placeholder="000-000-0000"  pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" title="PHONE must be in the format 000-000-0000" required inputmode="numeric" autocomplete="tel" maxlength="12">
                   </div>
                   <div class="form-group">
                      <label for="email"> Email Address <span style="color: #e00e0e;">*</span></label>
